--- a/node_server/package.json
+++ b/node_server/package.json
@@ -10,9 +10,12 @@
   "license": "ISC",
   "dependencies": {
     "@aws-sdk/client-comprehendmedical": "^3.565.0",
+    "@google/generative-ai": "^0.9.0",
+    "axios": "^1.6.8",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "node-fetch": "^3.3.2",
     "nodemon": "^3.1.0"
   }
 }
